--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Cyber Security Gateway</title>
 </head>
 <body>
-  <h1>Welcome to Cyber Security Gateway</h1> <\br>
-  <h2>Benyapha Kongmuenrak<\h2>
+  <h1>Welcome to Cyber Security Gateway</h1> </br>
+  <h2>Benyapha Kongmuenrak</h2>
 </body>
 </html>
